Fix: Replace emoji buttons with text to fix syntax errors

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -984,11 +984,11 @@
                         <span>${cat.name}</span>
                         <div style="display:flex; gap:8px;">
                             <button class="cat-edit" data-id="${cat.id}" 
-                                style="background:none; border:none; color:#888; cursor:pointer; padding:2px;"
-                                title="Edit">✏️</button>
+                                style="background:rgba(255,255,255,0.1); border:1px solid #666; color:#ccc; cursor:pointer; padding:4px 8px; border-radius:4px; font-size:11px;"
+                                title="Edit category">Edit</button>
                             <button class="cat-del" data-id="${cat.id}" data-name="${cat.name}"
-                                style="background:none; border:none; color:var(--danger); cursor:pointer; padding:2px;"
-                                title="Delete">🗑️</button>
+                                style="background:rgba(220,38,38,0.2); border:1px solid var(--danger); color:var(--danger); cursor:pointer; padding:4px 8px; border-radius:4px; font-size:11px;"
+                                title="Delete category">Del</button>
                         </div>
                     </div>
                 `;
