Debug: Add version log to verify deployment

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -1023,6 +1023,7 @@
                     e.preventDefault();
                     const id = parseInt(btn.dataset.id);
                     console.log('Edit button clicked for category ID:', id);
+                    console.log('VERSION: 2024-12-18-17:45 - Calling openCategoryModal');
                     openCategoryModal(id);
                 });
             });
