Fix: Remove clipboard emoji from All Items button

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -962,7 +962,7 @@
                     transition:all 0.2s;
                     font-weight:${allSelected ? 'bold' : 'normal'};
                 ">
-                    <span>📋 All Items</span>
+                    <span>All Items</span>
                 </div>
             `;
 
